Fix overflow property in style.css

--- a/style.css
+++ b/style.css
@@ -381,10 +381,10 @@ body{
 
     box-shadow:0 15px 45px rgba(0,0,0,.45);
 
-   
     width:100%;
 
-    overflow:visible
+    overflow:visible;
+
 
 }
 
